# Sorting

./: CMakeLists.txt  CMakePresets.json  README.md  Sorting.sln
C++/: C++.vcxproj  C++.vcxproj.filters  Sorter.h
C++/FastSorts/: CMakeLists.txt
C++/FastSorts/Comparors/: CMakeLists.txt  comparors.cpp  comparors.hpp  main.cpp
C++/FastSorts/Distributors/: CMakeLists.txt  distributors.cpp  distributors.hpp  main.cpp
C++/SlowSorts/: CMakeLists.txt
C++/SlowSorts/Pickers/: CMakeLists.txt  main.cpp  pickers.cpp  pickers.hpp
C++/SlowSorts/Steppers/: CMakeLists.txt  main.cpp  steppers.cpp  steppers.hpp
C++/Utilities/: CMakeLists.txt  utils.cpp  utils.hpp
Sorting/: Sorter.cpp  Sorting.cpp  Sorting.vcxproj  Sorting.vcxproj.filters
